# TrabalhoPratico-POO

./: .gitignore  App.cpp  App.h  Building.cpp  Building.h  CMakeLists.txt  Cell.cpp  Cell.h  Codes.h  Commands.cpp  Commands.h  Interface.cpp  Interface.h  Island.cpp  Island.h  Player.cpp  Player.h  README.md  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Storage.cpp  Storage.h  Worker.cpp  Worker.h  main.cpp
