cmake_minimum_required(VERSION 3.20)
project(TrabalhoPratico_POO_Reloaded)

set(CMAKE_CXX_STANDARD 23)

add_executable(TrabalhoPratico_POO_Reloaded main.cpp App.h App.cpp App.h Island.cpp Island.h Cell.cpp Cell.h Building.cpp Building.h Player.cpp Player.h Interface.cpp Interface.h Storage.cpp Storage.h)
