cmake_minimum_required(VERSION 3.20)
project(TP_POO_RELOADED)

set(CMAKE_CXX_STANDARD 23)

add_executable(TP_POO_RELOADED main.cpp App.h App.cpp App.h Island.cpp Island.h Cell.cpp Cell.h Building.cpp Building.h Player.cpp Player.h Interface.cpp Interface.h Storage.cpp Storage.h Worker.cpp Worker.h Codes.h)
